--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -1,27 +1,93 @@
-<!DOCTYPE html>
-
-<html>
+﻿<!DOCTYPE html>
+<html data-ng-app="app">
 <head>
-<title></title>
+    <style>
+        /* This helps the ng-show/ng-hide animations start at the right place. */
+        /* Since Angular has this but needs to load, this gives us the class early. */
+        .ng-hide {
+            display: none!important;
+        }
+    </style>
+    <title data-ng-bind="title">Hot Towel Angular</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+
+    <script>
+        // Must be first. IE10 mobile viewport fix
+        if ("-ms-user-select" in document.documentElement.style && navigator.userAgent.match(/IEMobile\/10\.0/)) {
+            var msViewportStyle = document.createElement("style");
+            var mq = "@-ms-viewport{width:auto!important}";
+            msViewportStyle.appendChild(document.createTextNode(mq));
+            document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
+        }
+    </script>
+
+    <link href="content/ie10mobile.css" rel="stylesheet" />
+    <link href="content/bootstrap.min.css" rel="stylesheet" />
+    <link href="content/font-awesome.min.css" rel="stylesheet" />
+    <link href="content/toastr.css" rel="stylesheet" />
+    <link href="content/customtheme.css" rel="stylesheet">
+    <link href="content/styles.css" rel="stylesheet" />
 </head>
 <body>
-	<div>
-		<img src="http://cbenchmarkr.appspot.com/reebok-crossfit.jpg" width="512"
-		height="104" alt="crossfit" title="crossfit" border="0" /> 
-	</div> 
-	<div>
-		<img src="http://nicepresso.appspot.com/appengine_logo.gif"
-			height="30" alt="GAE" title="GAE" border="0" /> <img
-			src="http://nicepresso.appspot.com/spring_logo.png"
-			height="30" alt="spring" title="spring" border="0" />
-	</div>
+    <div>
+        <div data-ng-include="'app/layout/shell.html'"></div>
+        <div id="splash-page" data-ng-show="false">
+            <div class="page-splash">
+                <div class="page-splash-message">
+                    Hot Towel Angular
+                </div>
+                <div class="progress progress-striped active page-progress-bar">
+                    <div class="bar"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <span data-cc-scroll-to-top></span>
 
-	<br>
-	<a href="./secured/trainee.jsp">proceed to your profile page (sign in required)</a>
-	<p>
-		Question? Comment? <a href="mailto:ohadr.developer@gmail.com?Subject=crossfit" target="_top">
-			Contact Us</a>
-	</p>
+     <!-- script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script-->
+
+    <!-- Vendor Scripts -->
+    <script src="scripts/jquery-2.1.1.js"></script>
+    <script src="scripts/angular.js"></script>
+    <script src="scripts/angular-animate.js"></script>
+    <script src="scripts/angular-route.js"></script>
+    <script src="scripts/angular-sanitize.js"></script>
+    <script src="scripts/bootstrap.js"></script>
+    <script src="scripts/toastr.js"></script>
+    <script src="scripts/moment.js"></script>
+    <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
+    <script src="scripts/spin.js"></script>
+
+    <!-- Bootstrapping -->
+    <script src="app/app.js"></script>
+    <script src="app/config.js"></script>
+    <script src="app/config.exceptionHandler.js"></script>
+    <script src="app/config.route.js"></script>
+
+    <!-- common Modules -->
+    <script src="app/common/common.js"></script>
+    <script src="app/common/logger.js"></script>
+    <script src="app/common/spinner.js"></script>
+
+    <!-- common.bootstrap Modules -->
+    <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
+
+    <!-- app -->
+    <script src="app/admin/admin.js"></script>
+    <script src="app/dashboard/dashboard.js"></script>
+    <script src="app/layout/shell.js"></script>
+    <script src="app/layout/sidebar.js"></script>
+    <script src="app/layout/topnav.js"></script>
+    <script src="app/authentication/login.js"></script>
+    <script src="app/authentication/forgotpassword.js"></script>
+    <script src="app/authentication/newuser.js"></script>
+
+    <!-- app Services -->
+    <script src="app/services/datacontext.js"></script>
+    <script src="app/services/directives.js"></script>
+    <script src="app/services/authentication.js"></script>
 </body>
 </html>
