--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -22,7 +22,8 @@
             document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
         }
     </script>
-
+    
+    <link href="content/ng-table.css" rel="stylesheet" />
     <link href="content/ie10mobile.css" rel="stylesheet" />
     <link href="content/bootstrap.min.css" rel="stylesheet" />
     <link href="content/font-awesome.min.css" rel="stylesheet" />
@@ -84,6 +85,7 @@
     <script src="app/authentication/login.js"></script>
     <script src="app/authentication/forgotpassword.js"></script>
     <script src="app/authentication/newuser.js"></script>
+    <script src="app/workouts/workouts.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
