--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -86,6 +86,7 @@
     <script src="app/authentication/forgotpassword.js"></script>
     <script src="app/authentication/newuser.js"></script>
     <script src="app/workouts/workouts.js"></script>
+    <script src="app/workouts/addworkout.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
