--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -5,18 +5,23 @@
                 <div class="widget wviolet">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
-                        <table class="table">
-                            <tr>
-                                <th>Name</th>
-                                <th>Result</th>
-                                <th>Date</th>
-                            </tr>
-                            <tr ng-repeat="workout in vm.workouts">
-                                <td> {{workout.name}} </td>
-                                <td> {{workout.result}} </td>
-                                <td> {{workout.date}} </td>
-                            </tr>
-                        </table>
+                        <div class="row">
+                            <button ng-click="vm.addWorkout()" class="btn left">Add</button>
+                        </div>
+                        <div>
+                            <table class="table">
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Result</th>
+                                    <th>Date</th>
+                                </tr>
+                                <tr ng-repeat="workout in vm.workouts">
+                                    <td> {{workout.name}} </td>
+                                    <td> {{workout.result}} </td>
+                                    <td> {{workout.date}} </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                     <div class="widget-foot">
                         <div class="clearfix"></div>
