--- a/cft_calc/src/main/webapp/app/authentication/forgotpassword.html
+++ b/cft_calc/src/main/webapp/app/authentication/forgotpassword.html
@@ -1,5 +1,5 @@
-﻿<section data-ng-controller="forgotpassword as vm">
-    <form ng-submit="vm.sendPassword()">
+<section data-ng-controller="forgotpassword as vm">
+    <form ng-submit="vm.onForgotPassword()">
         <div class="login">
             <div class="left small">
                 <h6>Enter you email below for a password reminder</h6>
