--- a/cft_calc/src/main/webapp/app/authentication/newuser.html
+++ b/cft_calc/src/main/webapp/app/authentication/newuser.html
@@ -4,7 +4,7 @@
             <h1>{{vm.title}}</h1>
             <p class="row">
                 <label for="login">Email:</label>
-                <input type="email" name="login" ng-model="vm.userInfo.userName" placeholder="Enter you email address" required>
+                <input type="email" name="login" ng-model="vm.userInfo.userName" placeholder="Enter your email address" required>
             </p>
             <p class="row">
                 <label for="password">Password:</label>
