--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -34,16 +34,16 @@
                                     <tr>
                                         <th>First Name</th>
                                         <th>Last Name</th>
-                                        <th>Age</th>
-                                        <th>Location</th>
+                                        <th>Email</th>
+                                        <th>Grade</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr data-ng-repeat="p in vm.people">
                                         <td>{{p.firstName}}</td>
                                         <td>{{p.lastName}}</td>
-                                        <td>{{p.age}}</td>
-                                        <td>{{p.location}}</td>
+                                        <td>{{p.id}}</td>
+                                        <td>{{p.totalGrade}}</td>
                                     </tr>
                                 </tbody>
                             </table>
