--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -5,9 +5,9 @@
                 <div class="widget wviolet">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
-                        <div class="row">
+                        <!-- div class="row">
                             <button ng-click="vm.addWorkout()" class="btn left">Add</button>
-                        </div>
+                        </div-->
                         <div>
                             <table class="table">
                                 <tr>
