--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -18,7 +18,7 @@
                                 <tr ng-repeat="workout in vm.workouts">
                                     <td> {{workout.name}} </td>
                                     <td> {{workout.result}} </td>
-                                    <td> {{workout.date}} </td>
+                                    <td> {{workout.timestamp}} </td>
                                 </tr>
                             </table>
                         </div>
