--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -8,12 +8,14 @@
                         <div class="widget-content user">
                             <div class="container-fluid">
                                 <div class="row">
-                                    <label>Name: </label>
-                                    <input type="text" ng-model="vm.workout.name" />
-                                </div>
-                                <div class="row container-fluid">
+                                    <label>Workout Name: </label>
+							       	<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames">
+							        	<!-- option value="">(blffffffffffank)</option-->
+							        </select>
+							    </div>
+                                <div class="row">
                                     <label>Result: </label>
-                                    <input type="text" ng-model="vm.workout.result" />
+                                    <input type="text" data-ng-model="vm.workout.result" />
                                 </div>
                                 <div class="row">
                                     <label>Date: </label>
