--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -5,6 +5,10 @@
                 <div class="widget wviolet">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
+						<div class="row">
+							<label>Workout Name: </label>
+							<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames" />
+						</div>
                         <!-- div class="row">
                             <button ng-click="vm.addWorkout()" class="btn left">Add</button>
                         </div-->
