#4 : get workouts for trainee

--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -9,9 +9,7 @@
                             <div class="container-fluid">
                                 <div class="row">
                                     <label>Workout Name: </label>
-							       	<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames">
-							        	<!-- option value="">(blffffffffffank)</option-->
-							        </select>
+							       	<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames" />
 							    </div>
                                 <div class="row">
                                     <label>Result: </label>
