--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -4,18 +4,18 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="today-datas">
-                        <li class="blightblue">
+                        <!-- li class="blightblue">
                             <div class="pull-left"><i class="fa fa-plane"></i></div>
                             <div class="datas-text pull-right">
                                 <span class="bold">May 18 - 19, 2015</span> Castle Resort, Neverland
                             </div>
                             <div class="clearfix"></div>
-                        </li>
+                        </li-->
 
                         <li class="borange">
                             <div class="pull-left"><i class="fa fa-envelope"></i></div>
                             <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span> Messages
+                                <span class="bold">{{vm.messageCount}}</span> Registered Users
                             </div>
                             <div class="clearfix"></div>
                         </li>
