--- a/cft_calc/src/main/webapp/app/admin/admin.html
+++ b/cft_calc/src/main/webapp/app/admin/admin.html
@@ -1,17 +1,36 @@
-﻿<section class="mainbar" data-ng-controller="admin as vm">
+<section class="mainbar" data-ng-controller="adminAddWorkoutMetadata as vm">
     <section class="matter">
-        <div class="container">
-            <div class="row">
-                <div class="widget wviolet">
-                    <div data-cc-widget-header title="{{vm.title}}"></div>
-                    <div class="widget-content user">
-                        <h3>TODO: Implement Your Features</h3>
-                    </div>
-                    <div class="widget-foot">
-                        <div class="clearfix"></div>
+        <form ng-submit="vm.onSaveWorkoutMetadata()">
+            <div class="container">
+                <div class="row">
+                    <div class="widget wviolet">
+                        <div data-cc-widget-header title="{{vm.title}}"></div>
+                        <div class="widget-content user">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <label>Workout Name: </label>
+                                    <input type="text" data-ng-model="vm.workout.name" />
+							       	</select>
+							    </div>
+                                <div class="row">
+                                    <label>repetitionBased: </label>
+                                    <input type="text" data-ng-model="vm.workout.repetitionBased" />
+                                </div>
+                                <div class="row">
+                                    <label>description: </label>
+                                    <input type="text" data-ng-model="vm.workout.description" />
+                                </div>
+                            </div>
+                            <div class="container-fluid">
+                                <button type="submit">Save</button>
+                            </div>
+                        </div>
+                        <div class="widget-foot">
+                            <div class="clearfix"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
     </section>
 </section>
