--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -22,7 +22,7 @@
             document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
         }
     </script>
-    
+
     <link href="content/ng-table.css" rel="stylesheet" />
     <link href="content/ie10mobile.css" rel="stylesheet" />
     <link href="content/bootstrap.min.css" rel="stylesheet" />
@@ -48,8 +48,6 @@
 
     <span data-cc-scroll-to-top></span>
 
-     <!-- script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script-->
-
     <!-- Vendor Scripts -->
     <script src="scripts/jquery-2.1.1.js"></script>
     <script src="scripts/angular.js"></script>
@@ -61,6 +59,7 @@
     <script src="scripts/moment.js"></script>
     <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="scripts/spin.js"></script>
+
 
     <!-- Bootstrapping -->
     <script src="app/app.js"></script>
@@ -87,6 +86,8 @@
     <script src="app/authentication/newuser.js"></script>
     <script src="app/workouts/workouts.js"></script>
     <script src="app/workouts/addworkout.js"></script>
+    
+    <script src="app/admin/addworkout_metadata.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
