--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -1,6 +1,6 @@
 ﻿<section class="mainbar" data-ng-controller="workouts as vm">
     <section class="matter">
-        <div class="container">
+        <div class="container"">
             <div class="row">
                 <div class="widget wviolet">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
@@ -10,11 +10,16 @@
 							<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames" ng-change='vm.onWorkoutChanged()' >
 							</select>
 						</div>
-                        <!-- div class="row">
-                            <button ng-click="vm.addWorkout()" class="btn left">Add</button>
-                        </div-->
-                        <div>
+						<div style="height:200px"
+						    ac-chart="chartType" 
+						    ac-data="chartData" 
+						    ac-config="config"
+						    class="chart">
+						</div>
+												  
+						<div>
 							<ul>
+							        <!-- li ng-repeat="xxx in xxxs">{{xxx}}</li-->
 							        <li ng-repeat="workout in vm.workouts">{{workout.result}} : {{workout.timestamp}}</li>
 							        <li ng-show="!vm.workouts.length">No records</li>
 							</ul>
