--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -37,7 +37,7 @@
         <div id="splash-page" data-ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
-                    Crossfit Benchmarkr Angular
+                    CrossFit benchmarkr
                 </div>
                 <div class="progress progress-striped active page-progress-bar">
                     <div class="bar"></div>
@@ -60,6 +60,10 @@
     <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="scripts/spin.js"></script>
 
+	<!-- script type='text/javascript' src='charts/angular-charts.min.js'></script-->
+	<!-- script data-require="angular.js@1.2.2" src="http://code.angularjs.org/1.2.2/angular.js" data-semver="1.2.2"></script-->
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>	
+	<script type="text/javascript" src="https://rawgit.com/chinmaymk/angular-charts/bower/dist/angular-charts.js"></script>
 
     <!-- Bootstrapping -->
     <script src="app/app.js"></script>
