--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -30,6 +30,7 @@
     <link href="content/toastr.css" rel="stylesheet" />
     <link href="content/customtheme.css" rel="stylesheet">
     <link href="content/styles.css" rel="stylesheet" />
+    <link href="content/ohad.css" rel="stylesheet" />
 </head>
 <body>
     <div>
