all buttons (except login pages) are fucked + datepicker #17

--- a/cft_calc/src/main/webapp/app/authentication/login.html
+++ b/cft_calc/src/main/webapp/app/authentication/login.html
@@ -34,7 +34,7 @@
                 <input type="text" name="lastname" ng-model="vm.userInfo.lastName" placeholder="Your last name" required>
             </p>
             <p class="row">
-                <button class="button primary button-block" type="submit">Sign up for benchmarkr</button>
+                <button class="appl-button signup primary button-block" type="submit">Sign up for benchmarkr</button>
             </p>
         </form>
     </div>
