after user clicks verification link, show him the main page #16

--- a/cft_calc/src/main/webapp/login/AccountActivated.htm
+++ b/cft_calc/src/main/webapp/login/AccountActivated.htm
@@ -11,7 +11,7 @@
 
 	<h3>Account was Activated Successfully</h3>
 	<div style="margin-top:  25px ;position: relative; font:15px">
-			Please try to <a href="../secured/trainee.jsp">login again</a>. 
+			Please try to <a href="../">login again</a>. 
 	</div>
 
 </body>
