--- a/cft_calc/src/main/webapp/app/authentication/login.html
+++ b/cft_calc/src/main/webapp/app/authentication/login.html
@@ -8,11 +8,14 @@
             <p class="row">
                 <input type="password" name="password" ng-model="vm.userInfo.password" placeholder="Enter your Password" required>
             </p>
-            <p class="login-submit pull-right">
+            <!-- p class="login-submit pull-right">
                 <button type="submit" class="login-button">Login</button>
-            </p>
+            </p-->
             <p class="forgot-password">
                 <a ng-click="vm.fotgotPassword()">Forgot your password?</a>
+            </p>
+            <p class="row">
+                <button class="appl-button signup primary button-block" type="submit">Sign in</button>
             </p>
         </form>
     </div>
