--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -32,6 +32,7 @@
                             <table class="table table-condensed table-striped">
                                 <thead>
                                     <tr>
+                                        <th>#</th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
                                         <th>Email</th>
@@ -40,6 +41,7 @@
                                 </thead>
                                 <tbody>
                                     <tr data-ng-repeat="p in vm.people">
+                                        <td>{{$index+1}}</td>
                                         <td>{{p.firstName}}</td>
                                         <td>{{p.lastName}}</td>
                                         <td>{{p.id}}</td>
@@ -55,10 +57,27 @@
                 </div>
                 <div class="col-md-6">
                     <div class="widget wgreen">
-                        <div data-cc-widget-header title="{{vm.news.title}}"
+                        <div data-cc-widget-header title="Leaderboard per-workout"
                              allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
-                            <small>{{vm.news.description}}</small>
+                            <table class="table table-condensed table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Grade - annie</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr data-ng-repeat="p in vm.people">
+                                        <td>{{$index+1}}</td>
+                                        <td>{{p.firstName}}</td>
+                                        <td>{{p.lastName}}</td>
+                                        <td>{{p.resultsMap.annie}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix"></div>
