--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -34,13 +34,18 @@
 	                <div class="col-md-6">
 	                    <div class="widget wred">
 	                        <div data-cc-widget-header title="Instructions"></div>
-	                           <div class="widget-content text-center text-info">
+	                           <div class="widget-content text-left text-info">
 	                            <div class="container-fluid">
 	                                <p class="row">
-	                                    <label>How to insert your data: choose the workout from the dropdown list. Important: if this is a repition-based WOD (e.g. cindy), 
+	                                    How to enter a workout:
+								    </p>
+	                                <p class="row">
+	                                    choose the workout from the dropdown list. if this is a repition-based WOD (e.g. cindy), 
 	                                    the result is the <b>number of repititions</b>. For example, if you did "cindy", 10 rounds plus 4 pullups. in this case, the result 
 	                                    is the number of total repititions: 10 rounds * 30 (5 pullups, 10 pushups and 15 squats) + 4 = 304.   
-	                                    If it is time-based WOD, the result in the <b>number of seconds</b>.</label>
+								    </p>
+	                                <p class="row">
+										If it is time-based WOD, the result in the <b>number of seconds</b>.
 								    </p>
 	                            </div>
 	                        </div>
