after account-creation, show message to user "email sent" #21

--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -8,7 +8,7 @@
             display: none!important;
         }
     </style>
-    <title data-ng-bind="title">Crossfit Benchmarkr Angular</title>
+    <title data-ng-bind="title">Crossfit Benchmarkr</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
@@ -89,6 +89,8 @@
     <script src="app/authentication/login.js"></script>
     <script src="app/authentication/forgotpassword.js"></script>
     <script src="app/authentication/newuser.js"></script>
+    <script src="app/authentication/accountCreatedSuccess.js"></script>
+
     <script src="app/workouts/workouts.js"></script>
     <script src="app/workouts/addworkout.js"></script>
     
