--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -1,4 +1,4 @@
-﻿<section class="mainbar" data-ng-controller="workouts as vm">
+<section class="mainbar" data-ng-controller="workouts as vm">
     <section class="matter">
         <div class="container"">
             <div class="row">
@@ -7,7 +7,7 @@
                     <div class="widget-content user">
 						<div class="row">
 							<label>Workout Name: </label>
-							<select data-ng-model="vm.workout.name" ng-init="" data-ng-options="w for w in vm.workoutNames" ng-change='vm.onWorkoutChanged()' >
+							<select data-ng-model="vm.workout.name" ng-init="" data-ng-options="w for w in vm.workoutNames | orderBy:'toString()'" ng-change='vm.onWorkoutChanged()' >
 							</select>
 						</div>
 						<div style="height:200px"
