--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -11,7 +11,7 @@
 	                            <div class="container-fluid">
 	                                <p class="row">
 	                                    <label>Workout Name: </label>
-								       	<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames" />
+								       	<select data-ng-model="vm.workout.name" data-ng-options="w for w in vm.workoutNames | orderBy:'toString()'" />
 								    </p>
 	                                <p class="row">
 	                                    <input type="text" data-ng-model="vm.workout.result" placeholder="Enter the result (see notes)" required/>
