add facebool link to main page #24

--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -19,6 +19,12 @@
                             </div>
                             <div class="clearfix"></div>
                         </li>
+                        <li class="app_link">
+                            <div class="pull-left">
+                            	<a href="https://www.facebook.com/cbenchmarkr" class="project-link"><img class="app_link" src="../../content/images/Facebook_Icon_2.png" alt="Facebook page"></a>       
+                            </div>
+                            <div class="clearfix"></div>
+                        </li>
 
                     </ul>
                 </div>
