[authentication] account locked handling #31
also related to : security bug!! after 5 login failures, account locked
but user is logged in !! #29

--- a/cft_calc/src/main/webapp/app/authentication/accountLocked.html
+++ b/cft_calc/src/main/webapp/app/authentication/accountLocked.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="accountLocked as vm">
+<section data-ng-controller="accountCreatedSuccess as vm">
     <div class="login">
 		<h3>Account Locked</h3>
 	
