leaderboard-per-WOD: show only users with results #36
also related to : leaderboard: time-based WODs: sort decendently #34

--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -78,7 +78,7 @@
                                         <th>#</th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
-                                        <th>Grade - {{vm.workout.name}}</th>
+                                        <th>Result - {{vm.workout.name}}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
