leaderboard counters: 'registered users' 'registered WODs' #37

--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -13,9 +13,16 @@
                         </li-->
 
                         <li class="borange">
-                            <div class="pull-left"><i class="fa fa-envelope"></i></div>
+                            <div class="pull-left"><i class="fa fa-user"></i></div>
                             <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span> Registered Users
+                                <span class="bold">{{vm.registeredUsers}}</span> Registered Users
+                            </div>
+                            <div class="clearfix"></div>
+                        </li>
+                        <li class="borange">
+                            <div class="pull-left"><i class="fa fa-pencil"></i></div>
+                            <div class="datas-text pull-right">
+                                <span class="bold">{{vm.registeredResults}}</span> Registered Results
                             </div>
                             <div class="clearfix"></div>
                         </li>
