#37 add units to leaderboard

--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -85,7 +85,7 @@
                                         <th>#</th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
-                                        <th>Result - {{vm.workout.name}}</th>
+                                        <th>Result - {{vm.workout.name}} ({{vm.workout.units}})</th>
                                     </tr>
                                 </thead>
                                 <tbody>
