fix combobox for #35

--- a/cft_calc/src/main/webapp/app/authentication/login.html
+++ b/cft_calc/src/main/webapp/app/authentication/login.html
@@ -30,7 +30,7 @@
                 <input type="text" name="lastname" ng-model="vm.userInfo.lastName" placeholder="Your last name" required>
             </p>
 			<p class="row">
-				<select data-ng-model="vm.userInfo.gender">
+				<select class="login-select" data-ng-model="vm.userInfo.gender">
 					<option value="Male">Male</option>
 					<option value="Female">Female</option>
 				</select>
