support filtering by date-of-birth #43

--- a/cft_calc/src/main/webapp/app/authentication/login.html
+++ b/cft_calc/src/main/webapp/app/authentication/login.html
@@ -51,6 +51,9 @@
 				</select>
             </p>
             <p class="row">
+                <input type="date" name="dob" ng-model="vm.userInfo.dob" placeholder="dd-MM-yyyy" required />
+            </p>
+            <p class="row">
                 <button class="appl-button signup primary button-block" type="submit">Sign up for benchmarkr</button>
             </p>
         </form>
